syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";

option go_package = "github.com/alimikegami/go-monorepo/grpc-server/proto";


service UserService {
    rpc GetUsers (google.protobuf.Empty) returns (Users) {}
    rpc CreateUser(User) returns (User) {}
}

message User {
  int64 id = 1;
  string name = 2;
}

message Users {
  repeated User users = 1;
}

